# Kooha

./: io.github.seadve.Kooha.json  meson.build
data/: kooha.gresource.xml  meson.build
data/ui/: style.css  window.ui  window.ui~
po/: POTFILES
src/: main.vala  meson.build  style.css  window.vala
